# python-skeleton

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ci.sh  docker-compose.consumers.override.yml  docker-compose.consumers.yml  docker-compose.override.yml  docker-compose.services.override.yml  docker-compose.services.yml  docker-compose.yml  pyproject.toml  pyscript.sh  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pipeline.yml
docker/python/: Dockerfile
docker/python/rootfs/: docker-healthcheck.sh  install.sh  mongodb-healthcheck.sh  rabbitmq-healthcheck.sh
docker/python/rootfs-dev/: install.sh
github/workflows/: pipeline.yml
project/: __init__.py
project/apps/: settings.py
project/apps/api/: __main__.py  main.py
project/apps/api/controllers/: __init__.py  public_global_router.py
project/apps/api/middleware/: auth_handler.py  exception_handler.py  utils.py
project/apps/cli/: __main__.py  main.py
project/apps/cli/middleware/: utils.py
src/: requirements.txt
src/apps/app_cli/: __main__.py  commander.py  settings.py
src/apps/app_http/: __main__.py  server.py  settings.py
src/apps/cnf_cli/: __main__.py  commander.py
src/apps/cnf_http/: __main__.py  server.py  settings.py
src/apps/configurator_cli/: __main__.py  commander.py  settings.py
src/apps/configurator_http/: __main__.py  server.py
tests/: .pylintrc  conftest.py  licenses.ini  mypy.ini  requirements.txt
tests/functional/: __init__.py
tests/functional/apps/: context_amqp_middleware.py  context_mongodb_middleware.py  user_context.py  utils.py
tests/unit/libs/: __init__.py
(+175 files in other folders)
